--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,8 @@
 version: "3"
 services:
-  influxdb:
-    image: influxdb
-    environment:
-      INFLUXDB_DB: sensors
-      INFLUXDB_ADMIN_USER: admin
-      INFLUXDB_ADMIN_PASSWORD: admin
-    ports:
-      - "8086:8086"
+  mqtt_builder:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    volumes:
+      - ./:/app
